[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Absolute Xero.otf" type="DynamicFontData" id=2]
[ext_resource path="res://warped city files/ENVIRONMENT/background/skyline-a.png" type="Texture" id=3]
[ext_resource path="res://warped city files/ENVIRONMENT/background/skyline-b.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[node name="main menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="manzara_sol" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 600.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="manzara_sag" type="TextureRect" parent="."]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 242.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 2 )
text = "Bastaw"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 256.0
margin_top = 392.0
margin_right = 768.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../QUIT")
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "New Game"

[node name="LOAD" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 512.0
margin_bottom = 52.0
theme = SubResource( 7 )
text = "Load Game"

[node name="OPTIONS" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 512.0
margin_bottom = 80.0
theme = SubResource( 9 )
text = "Options"

[node name="QUIT" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 512.0
margin_bottom = 108.0
focus_neighbour_bottom = NodePath("../NewButton")
theme = SubResource( 11 )
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LOAD" to="." method="_on_LOAD_pressed"]
[connection signal="pressed" from="VBoxContainer/OPTIONS" to="." method="_on_OPTIONS_pressed"]
[connection signal="pressed" from="VBoxContainer/QUIT" to="." method="_on_QUIT_pressed"]
